compiler/testData/compileKotlinAgainstCustomBinaries/missingStaticClass/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/missingStaticClass/source.kt:4:15: error: cannot access class 'D'. Check your module classpath for missing or conflicting dependencies.
    val c = C.makeD()
              ^^^^^
COMPILATION_ERROR
